--- a/index.html
+++ b/index.html
@@ -3,9 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <title>Blue Lock RPG</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #0a0a0a;
+      color: white;
+      font-family: 'Segoe UI', sans-serif;
+      text-align: center;
+    }
+
+    header {
+      padding: 100px 20px;
+    }
+
+    h1 {
+      font-size: 3rem;
+      color: #00bfff; /* azul neon */
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.3rem;
+      color: #ccc;
+    }
+
+    .buttons {
+      margin-top: 40px;
+    }
+
+    .btn {
+      display: inline-block;
+      background-color: transparent;
+      color: #00bfff;
+      border: 2px solid #00bfff;
+      padding: 12px 24px;
+      margin: 10px;
+      border-radius: 8px;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+      background-color: #00bfff;
+      color: #000;
+    }
+
+    footer {
+      margin-top: 80px;
+      font-size: 0.9rem;
+      color: #444;
+    }
+  </style>
 </head>
-<body style="background:#0f0f0f; color:white; font-family:sans-serif; text-align:center; padding-top:100px;">
-  <h1>Blue Lock RPG</h1>
-  <p>O egoísta número 1 está prestes a nascer...</p>
+<body>
+  <header>
+    <h1>Blue Lock RPG</h1>
+    <p>"Supere seus limites. Seja o atacante nº 1."</p>
+
+    <div class="buttons">
+      <a href="https://forms.gle/seuLinkAqui" class="btn" target="_blank">Inscreva-se</a>
+      <a href="https://seulink.com/jogadores" class="btn" target="_blank">Ver Jogadores</a>
+      <a href="https://seulink.com/como-jogar" class="btn" target="_blank">Como Jogar / Regras</a>
+    </div>
+  </header>
+
+  <footer>
+    <p>Site criado por Dree &copy; 2025</p>
+  </footer>
 </body>
 </html>
